Fix sidebar close 'x' button alignment on Linux. r=troyt
(integrated from komodo (trunk) change 24173 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2346 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/bindings/scrolltabs.css
+++ b/src/chrome/komodo/skin/plat/gnome/bindings/scrolltabs.css
@@ -39,8 +39,6 @@ tab[type="file-tab"]
   list-style-image: url("moz-icon://stock/gtk-close?size=menu");
   -moz-appearance: none;
   border: none !important;
-  padding: 0 0 4px 0;
-  margin: 0;
   background: inherit;
   cursor: default;
 }
